@@ -3,23 +3,25 @@ import java.util.NoSuchElementException;
 
 public class FrontierQueue implements Frontier{
 
-    private LinkedList<Location> locations = new LinkedList<Location>();
+    private LinkedList<Location> locations;
+
+    public FrontierQueue(){
+	locations = new LinkedList<Location>();
+    }
     
     public void add(Location next){
 	locations.add(next);
     }
 
     public Location next(){
-	return locations.remove(0);
+	if(!hasNext()){
+	    throw new NoSuchElementException();
+	}
+	return locations.removeFirst();
     }
 
     public boolean hasNext(){
-	try{
-	    locations.getFirst();
-	}catch(NoSuchElementException e){
-	    return false;
-	}
-	return true;
+	return !locations.isEmpty();
     }
 
     public int size(){
